--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /cmder/vendor/conemu-maximus5/ConEmu.xml
 /SearchQueryTool/History
 /SimpleResxEditor/settings.xml
+/OutlookGoogleSync/ErrorReporting.json
