Tweak local settings

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /OutlookGoogleSync/ErrorReporting.json
 /OutlookGoogleSync/OGcalsync.log*
 /OutlookGoogleSync/*.TokenResponse-user
+/OutlookGoogleSync/*.log
